# wot-serve

./: Cargo.toml  README.md
.github/workflows/: wot-serve-ubuntu.yml  wot-serve.yml
examples/: advertise.rs  thing.rs
src/: advertise.rs  hlist.rs  lib.rs  servient.rs
src/servient/: builder.rs
