[package]
name = "wot-serve"
version = "0.1.0"
edition = "2021"
description = "Web of Things (WoT) Thing server"
license = "MIT"
repository = "https://github.com/sifis-home/wot-serve"
keywords = ["wot", "WebofThings"]

[dependencies]
wot-td = { git = "https://github.com/sifis-home/wot-td", branch = "extendable" }
mdns-sd = "0.5.1"
thiserror = "1.0"
anyhow = "1.0"
if-addrs = "0.7"
hostname = "0.3"
axum = "0.5.13"
serde = "1.0.141"

