[package]
name = "wot-serve"
version = "0.3.1"
edition = "2021"
description = "Web of Things (WoT) Thing server"
license = "MIT"
repository = "https://github.com/sifis-home/wot-serve"
keywords = ["wot", "WebofThings"]

[dependencies]
wot-td = "0.3.1"
mdns-sd = "0.7.1"
thiserror = "1.0"
if-addrs = "0.10.1"
hostname = "0.3"
axum = "0.6.10"
serde = "1.0.141"
serde_json = "1.0.83"
uuid = { version = "1.1.2", features = ["v4"] }
datta = "0.1"
tower-http = { version = "0.4.0", features = ["cors"] }

[dev-dependencies]
tokio = { version = "1.20.1", features = ["macros", "rt-multi-thread"] }

